Prevent wrapping of multiple word label on input-group

--- a/scss/forms/_input-group.scss
+++ b/scss/forms/_input-group.scss
@@ -56,6 +56,7 @@ $input-prefix-padding: 1rem !default;
     background: $input-prefix-background;
     color: $input-prefix-color;
     border: $input-prefix-border;
+    white-space: nowrap;
 
     @if has-value($input-prefix-border) {
       &:first-child {
